# lol

./: .gitignore  CMakeLists.txt  Nightmare.cpp  README.md
inc/: readF.hpp
src/: readF.cpp
